# advent-of-code-2025

./: .gitignore  CMakeLists.txt  abstract_day.h  day_runner.cpp  main.cpp
include/: abstract_day.h  day_runner.h
include/days/: day_eight.h  day_five.h  day_four.h  day_nine.h  day_one.h  day_seven.h  day_six.h  day_three.h  day_two.h
include/runner/: RunResult.h  day_runner.h  run_result.h
include/utils/: grid.h  grid_utils.h  string_utils.h
src/: day_runner.cpp  main.cpp
src/days/: day_eight.cpp  day_five.cpp  day_four.cpp  day_nine.cpp  day_one.cpp  day_seven.cpp  day_six.cpp  day_three.cpp  day_two.cpp
src/runner/: day_runner.cpp
test/: day_runner_test.cpp
test/days/: day_eight_test.cpp  day_five_test.cpp  day_four_test.cpp  day_nine_test.cpp  day_one_test.cpp  day_seven_test.cpp  day_six_test.cpp  day_three_test.cpp  day_two_test.cpp
test/utils/: grid_test.cpp  grid_utils_test.cpp
